# audio_teka

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: publish.yml
src/: config.py
src/adapters/: orm.py  repository.py
src/domain/: api_scraper.py  audioteka_new.html  events.py  model.py  preprocessing.py  schemas.py  scraper.py
src/entrypoints/: my_app.py
src/page/templates/: home.html
src/services_layer/: handlers.py  messagebus.py  service.py  unit_of_work.py
tests/: conftest.py  preprocessing_test.py  test_api.py  test_handlers.py  test_orm.py  test_repository.py  test_service.py  test_uow.py
