[tool.poetry]
name = "audioteka"
version = "0.1.0"
description = ""
authors = ["yellowBunny <zigggin3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
selenium = "^4.4.3"
chromedriver-binary = "^106.0.5249.21.0"
pandas = "^1.5.0"
beautifulsoup4 = "^4.11.1"
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
pydantic = "^1.10.2"
fastapi = "^0.85.0"
Jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
